# eigenslur

./: .gitignore  README.md  pyproject.toml  requirements.txt  telemetry-id  vercel.json
app/: __init__.py  config.py  main.py  prompt_templates.py  schemas.py
app/prompts/: __init__.py  prompt_a_usage.md  prompt_b_severity.md  prompt_c_disambiguation.md  prompt_d_drift.md
app/services/: __init__.py  fusion.py  labeler.py  labeler_base.py  llm_labeler.py  prompting.py  scoring.py  spectral.py  storage.py  text.py
app/static/: app.js  index.html  styles.css
docs/: improvement-roadmap.md
docs/plans/: 2026-02-13-eigenslur-backend-design.md
tests/: test_api.py  test_fusion.py  test_scoring.py  test_spectral.py
