[project]
name = "eigenslur-backend"
version = "0.1.0"
description = "EigenSlur backend for spectral slur risk scoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "numpy>=2.0.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "scipy>=1.14.0,<2.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
]
llm = [
  "openai>=1.40.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
